codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__pending_input_preview__tests__render_paused_steering_after_usage_limit.snap
---
source: tui/src/bottom_pane/pending_input_preview.rs
expression: "format!(\"{buf:?}\")"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 48, height: 5 },
    content: [
        "• Queued sends paused after usage limit         ",
        "  Press enter to review and resume queued sends ",
        "                                                ",
        "• Queued steering inputs                        ",
        "  ↳ Check the final command output.             ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 2, y: 0, fg: Cyan, bg: Reset, underline: Reset, modifier: BOLD,
        x: 39, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 8, y: 1, fg: Cyan, bg: Reset, underline: Reset, modifier: BOLD,
        x: 13, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 2, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 35, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
